--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "my-seoul-guide",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.3.0",
     "antd": "^4.15.4",
     "cra-template-typescript": "1.1.2",
+    "dotenv": "^8.2.0",
     "google-map-react": "^2.1.9",
     "mobx": "^6.3.0",
     "mobx-react": "^7.1.0",
