--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,11 @@
     "@ant-design/icons": "^4.6.2",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@nivo/core": "^0.69.0",
+    "@nivo/pie": "^0.69.0",
+    "@react-google-maps/api": "^2.1.1",
     "antd": "^4.15.4",
+    "axios": "^0.21.1",
     "cra-template-typescript": "1.1.2",
     "dotenv": "^8.2.0",
     "google-map-react": "^2.1.9",
