--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "babel-node src/index.js",
+    "dev": "nodemon --exec babel-node src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^2.24.0",
+    "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "graphql": "^15.5.0",
+    "graphql-any-type": "^0.0.3",
+    "graphql-yoga": "^1.18.3",
+    "node-fetch": "^2.6.1",
     "request": "^2.88.2",
     "xml-js": "^1.6.11"
+  },
+  "devDependencies": {
+    "dotenv": "^9.0.2"
   }
 }
