--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@apollo/client": "^3.3.18",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@nivo/core": "^0.69.0",
     "@nivo/pie": "^0.69.0",
     "@react-google-maps/api": "^2.1.1",
-    "antd": "^4.15.4",
+    "antd": "^4.15.5",
     "axios": "^0.21.1",
     "cra-template-typescript": "1.1.2",
-    "dotenv": "^8.2.0",
-    "google-map-react": "^2.1.9",
+    "dotenv": "^9.0.2",
+    "graphql": "^15.5.0",
+    "html-react-parser": "^1.2.6",
     "mobx": "^6.3.0",
     "mobx-react": "^7.1.0",
     "react": "^17.0.2",
@@ -21,7 +23,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,9 +52,10 @@
   },
   "devDependencies": {
     "@emotion/babel-preset-css-prop": "^11.2.0",
-    "@types/google-map-react": "^2.1.0",
+    "@types/history": "^4.7.8",
     "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.3",
+    "@types/react-dom": "^17.0.5",
+    "@types/react-router": "^5.1.14",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-slick": "^0.23.4"
   }
