--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "html-react-parser": "^1.2.6",
     "mobx": "^6.3.0",
     "mobx-react": "^7.1.0",
+    "mobx-state-tree": "^5.0.1",
     "react": "^17.0.2",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
