--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@apollo/client": "^3.3.18",
+    "@craco/craco": "^6.1.2",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@nivo/core": "^0.69.0",
@@ -13,12 +14,14 @@
     "antd": "^4.15.5",
     "axios": "^0.21.1",
     "cra-template-typescript": "1.1.2",
+    "customize-cra": "^1.0.0",
     "dotenv": "^9.0.2",
     "graphql": "^15.5.0",
     "html-react-parser": "^1.2.6",
     "mobx": "^6.3.0",
     "mobx-react": "^7.1.0",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.8",
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -28,7 +31,7 @@
     "typescript": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "craco start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
