--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,6 +3,7 @@
     "strict": true,
     "lib": ["es2015", "es2016", "es2017", "es2018", "es2019", "es2020"],
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "typeRoots": ["./types"]
   }
 }
