--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "my-seoul-guide",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@apollo/client": "^3.3.18",
