--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.24.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "graphql": "^15.5.0",
     "node-fetch": "^2.6.1",
     "pm2": "^4.5.6"
