--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "shortid": "^2.2.16",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.3.5"
   },
@@ -65,6 +66,10 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.1.8",
-    "@types/react-slick": "^0.23.5"
+    "@types/react-slick": "^0.23.5",
+    "@types/shortid": "^0.0.29",
+    "@typescript-eslint/parser": "^4.33.0",
+    "babel-eslint": "^10.1.0",
+    "craco-alias": "^3.0.1"
   }
 }
