--- a/client/package.json
+++ b/client/package.json
@@ -4,34 +4,35 @@
   "main": "App.js",
   "homepage": "https://myseoulguide.site/",
   "dependencies": {
-    "@ant-design/icons": "^4.6.3",
-    "@apollo/client": "^3.4.8",
-    "@craco/craco": "^6.2.0",
-    "@emotion/react": "^11.4.1",
+    "@ant-design/icons": "^4.7.0",
+    "@apollo/client": "^3.4.16",
+    "@craco/craco": "^6.3.0",
+    "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@nivo/core": "^0.73.0",
-    "@nivo/pie": "^0.73.0",
-    "@react-google-maps/api": "^2.2.0",
-    "antd": "^4.16.12",
-    "axios": "^0.21.1",
+    "@nivo/core": "^0.74.0",
+    "@nivo/pie": "^0.74.0",
+    "@react-google-maps/api": "^2.5.0",
+    "antd": "^4.16.13",
+    "axios": "^0.23.0",
     "cra-template-typescript": "1.1.2",
     "customize-cra": "^1.0.0",
     "dotenv": "^10.0.0",
-    "graphql": "^15.5.1",
-    "html-react-parser": "^1.2.8",
-    "mobx": "^6.3.2",
-    "mobx-react": "^7.2.0",
-    "pm2": "^5.1.1",
+    "graphql": "^15.6.1",
+    "html-react-parser": "^1.4.0",
+    "mobx": "^6.3.5",
+    "mobx-react": "^7.2.1",
+    "pm2": "^5.1.2",
     "react": "^17.0.2",
+    "react-app-rewire-alias": "^1.1.4",
     "react-app-rewired": "^2.1.8",
-    "react-countup": "^5.2.0",
+    "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "shortid": "^2.2.16",
     "slick-carousel": "^1.8.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "craco start ",
@@ -61,14 +62,14 @@
     "@babel/preset-react": "^7.14.5",
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@types/history": "^4.7.9",
-    "@types/node": "^16.7.1",
-    "@types/react": "^17.0.19",
+    "@types/node": "^16.11.1",
+    "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router": "^5.1.16",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/react-slick": "^0.23.5",
+    "@types/react-router": "^5.1.17",
+    "@types/react-router-dom": "^5.3.1",
+    "@types/react-slick": "^0.23.6",
     "@types/shortid": "^0.0.29",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/parser": "^5.1.0",
     "babel-eslint": "^10.1.0",
     "craco-alias": "^3.0.1"
   }
