--- a/package.json
+++ b/package.json
@@ -1,20 +1,77 @@
 {
-  "name": "my_seoul_guide",
+  "name": "my-seoul-guide",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "App.js",
+  "homepage": "https://myseoulguide.site/",
+  "proxy": "http://api.visitkorea.or.kr",
+  "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@craco/craco": "^6.3.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@nivo/core": "^0.74.0",
+    "@nivo/pie": "^0.74.0",
+    "@react-google-maps/api": "^2.5.0",
+    "antd": "^4.16.13",
+    "axios": "^0.23.0",
+    "cra-template-typescript": "1.1.2",
+    "customize-cra": "^1.0.0",
+    "dotenv": "^10.0.0",
+    "graphql": "^15.6.1",
+    "html-react-parser": "^1.4.0",
+    "mobx": "^6.3.5",
+    "mobx-react": "^7.2.1",
+    "pm2": "^5.1.2",
+    "react": "^17.0.2",
+    "react-app-rewire-alias": "^1.1.4",
+    "react-app-rewired": "^2.1.8",
+    "react-countup": "^6.0.0",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "react-xml-parser": "^1.1.8",
+    "shortid": "^2.2.16",
+    "slick-carousel": "^1.8.1",
+    "typescript": "^4.4.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "craco start ",
+    "build": "craco build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/noah071610/My-Seoul-Guide.git"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/noah071610/My-Seoul-Guide/issues"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
-  "homepage": "https://github.com/noah071610/My-Seoul-Guide#readme",
-  "description": ""
+  "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@types/history": "^4.7.9",
+    "@types/node": "^16.11.1",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router": "^5.1.17",
+    "@types/react-router-dom": "^5.3.1",
+    "@types/react-slick": "^0.23.6",
+    "@types/shortid": "^0.0.29",
+    "@typescript-eslint/parser": "^5.1.0",
+    "babel-eslint": "^10.1.0",
+    "craco-alias": "^3.0.1"
+  }
 }
